Fix spacing between informational images.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 img {
     height: auto;
-    width: 400px;
+    width: 100%;
 }
 
 .container {
@@ -38,15 +38,19 @@ img {
 .containerfive {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    flex-shrink: 1;
+    justify-content: center;
+    text-align: center;
+    margin: 10px;
     
 }
 
 .containersix {
     display: flex;
     justify-content: space-evenly;
+    padding-left: 300px;
+    padding-right: 300px;
+    padding-top: 25px;
 
 }
 
@@ -57,9 +61,11 @@ img {
 }
 
 .headertwo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    padding-top: 10px;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
 }
 
 .textone {
@@ -68,13 +74,13 @@ img {
 }
 
 .imageone {
-    padding-left: 200px;
+    padding-left: 100px;
     padding-bottom: 100px;
 }
 
 
 button {
-    width: 15%;
+    width: 75px;
     background-color: #3882F6;
     transition-duration: 0.4s;
     border-radius: 16px;
